--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">App Pinjam Barang</string>
+    <string name="app_name">SIMPINJAM</string>
     <string name="action_settings">Settings</string>
     <string-array name="list_barang">
         <item>Tablet</item>
